    * FIX: fix column editor for join columns if "SERVICE:" is l10n'ed

    WATO:
    * FIX: convert editing of global setting to POST. This avoid URL-too-long
      when defining lots of Event Console actions
    * FIX: LDAP configuration: allow DNs without DC=

    Event Console:
    * FIX: fix icon in events check if host specification is by IP address

1.2.2p1:
    Core:
    * FIX: correctly quote ! and \ in active checks for Nagios
    * FIX: Performing regular inventory checks at configured interval even
           when the service is in problem state
    * Check_MK core now supports umlauts in host-/service- and contactgroup names

    Checks & Agents:
    * FIX: vsphere_agent: fix problems whith ! and \ in username or password
    * FIX: check_mk_agent.aix: fix shebang: was python, must be ksh
    * FIX: cisco_qos: Be compatible to newer IOS-XE versions (Thanks to Ken Smith)
    * FIX: mk_jolokia: Handling spaces in application server instances correctly

    Multisite:
    * FIX: do not remove directories of non-exisant users anymore. This lead to
           a deletion of users' settings in case of an external authentication
           (like mod_ldap).
    * FIX: Fixed handling of dashboards without title in sidebar view snapin
    * FIX: titles and services got lost when moving join-columns in views
    * FIX: Fixed exception during initial page rendering in python 2.6 in special cases
           (Internal error: putenv() argument 2 must be string, not list)

    Livestatus:
    * livestatus.log: show utf-8 decoding problems only with debug logging >=2

    Notifications:
    * FIX: HTML mails: Handle the case where plugin argument is not set
    * FIX: HTML mails: remove undefinded placeholders like $GRAPH_CODE$

    WATO:
    * Improved handling of valuespec validations in WATO rule editor. Displaying a
      warning message when going to throw away the current settings.
    * FIX: fix bug where certain settings where not saved on IE. This was mainly